# RAG-test-prj

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes_chat.py  routes_ingest.py  schemas.py
app/core/: config.py  logging.py
app/graph/: nodes.py  state.py  workflow.py
app/ingestion/: chunking.py  file_processor.py  web_scraper.py
app/prompts/: templates.py
app/static/: index.html
app/vectorstore/: base.py  chroma_store.py  factory.py  pinecone_store.py
tests/: llm_test.py
