[project]
name = "rag-test-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "docx>=0.2.4",
    "fastapi[huggingface,standard]>=0.137.0",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "pinecone>=9.1.0",
    "playwright>=1.60.0",
    "pypdf>=6.13.3",
    "sentence-transformers>=5.6.0",
]
